Worked on fixing issues with logic, refactoring code and adding readme.md